# Zen_Terminal

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml  requirements.txt
scripts/: com.zenterminal.daemon.plist  install_macos.sh  zenterminal.service
zen_terminal/: __init__.py  audio.py  config.py  daemon.py  locker.py  main.py  monitor.py
