[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "zen-terminal"
version = "1.0.0"
description = "A strict background daemon that enforces mandatory breaks via OS screen-lock and guided meditation audio."
readme = "README.md"
license = { file = "LICENSE" }
authors = [{ name = "Richard Zhu" }]
requires-python = ">=3.10"
keywords = ["productivity", "focus", "break", "daemon", "pomodoro"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: No Input/Output (Daemon)",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS",
    "Operating System :: POSIX :: Linux",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Utilities",
]
dependencies = [
    "pynput>=1.7.6",
    "pygame>=2.5.0",
    "psutil>=5.9.0",
]

[project.scripts]
# Installs a `zen-terminal` command on PATH after `pip install -e .`
zen-terminal = "zen_terminal.main:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["zen_terminal*"]

# ---------------------------------------------------------------------------
# Developer tooling
# ---------------------------------------------------------------------------

[tool.ruff]
target-version = "py310"
line-length = 90
select = ["E", "F", "W", "I", "UP", "B", "C4", "SIM"]
ignore = ["E501"]  # line length handled by formatter

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.10"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
